--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,34 @@ body.scrolled .intro-overlay {
   pointer-events: none;
 }
 
+.nav-bar {
+    position: absolute;
+    top: 0%;
+    left: 50%; 
+    transform: translatex(-50%);
+    display: flex;
+    height: 3rem;
+    gap: clamp(0.2rem, 0.4rem, 2rem);
+    padding: 0.2rem;
+    justify-content: space-evenly;
+    border-radius: 5px;
+    background-color: #fdf9ed;
+}
+
+.nav-bar-btns {
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    color: hsl(200, 6%, 10%);
+    text-decoration: none;
+    padding: 1.5rem 0.6rem;
+    background-color: rgba(99, 99, 99, 0.7); 
+
+
+} 
+
 .main-content {
     min-height: 100vh;
     opacity: 0;
@@ -92,24 +120,11 @@ body.scrolled .main-content {
   transform: scale(1);
 }
 
-.nav-bar {
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    background-color: #fdf9ed;
-    width: 50vw;
-    margin: 0 auto;
-}
-
-.nav-text {
-    color: #000000;
-}
-
 .intro { 
-    margin: 3rem 0 0 3rem;
+    margin: 4rem 0 0 2rem;
     border-radius: 8px;
     padding: 0 1rem 1rem 1rem;
+    outline: 1px solid salmon;
 }
 .name-tag {
     font-size: 4rem;
@@ -151,7 +166,7 @@ body.scrolled .main-content {
 }
 
 .info-desc { 
-    /* a software engine... */
+    /* a software engineer... */
     font-weight: 400;
     font-size: 1.8rem;
 }
@@ -199,6 +214,7 @@ body.scrolled .main-content {
 .resume {
     font-size: 1.1rem;
     line-height: 1rem;
+    white-space: nowrap;
 }
 
 .profile-pic-wrapper {
