--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ html.scroll-enabled {
     padding: 0.2rem;
     justify-content: space-evenly;
     border-radius: 5px;
-    background-color: #fffefa;
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
 .nav-bar-btns {
@@ -49,12 +49,12 @@ html.scroll-enabled {
 
 .nav-bar-btns:hover .btn-text,
 .nav-bar-btns:hover .nav-bar-btns-text {
-  transform: scale(1.3);
+  transform: scale(1.15);
 }
 .nav-bar-btns-text {
-  position: relative;        /* establish a positioning context */
+  position: relative;
   transform-origin: center;
-  transition: 0.2s ease-out;
+  transition: 0.17s ease-out;
 }
 
 .nav-bar-btns + .nav-bar-btns::before { 
@@ -102,16 +102,19 @@ html.scroll-enabled {
 
 
 .intro { 
-    margin: 4rem 0 0 2rem;
+    margin: 15rem auto 0;
     border-radius: 8px;
-    padding: 0 1rem 1rem 1rem;
+    padding: 0 1rem 1rem;
     outline: 1px solid salmon 0; /* 0 sets opacity to 0 */
+    text-align: center;
 }
 .name-tag {
     font-size: 4rem;
     font-weight: 500;
     margin-top: 0;
     margin-bottom: 0;
+    color:#fdf9ed;
+
 }
 
 .my-name {
@@ -128,6 +131,9 @@ html.scroll-enabled {
     font-size: 1.1rem;
     font-weight: 300;
     position: relative;
+    color:aliceblue;
+    outline: 1px solid #fdf9ed 0;
+    text-align: center;
 }
 .intro-info > div {
     display: flex;
@@ -197,6 +203,37 @@ html.scroll-enabled {
     line-height: 1rem;
     white-space: nowrap;
 }
+
+.switch-box {
+    display: flex;
+    outline: 1px solid #fdf9ed;
+    margin: 1.5rem auto 0;
+    background-color: #c6b892;
+    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center-top;
+    padding: 0.5rem;
+    gap: 0.8rem;
+}
+
+.experience-box, .projects-box {
+    display: flex;
+    padding: 0.1rem 7rem;
+    outline: 1px solid seagreen 0;
+    background-color: #908a78;
+    border-radius: 7px;
+    font-size: 1.3rem;
+    
+}
+
+
+
+
+
+
+
+
+
 
 .profile-pic-wrapper {
     position: absolute;
