--- a/css/style.css
+++ b/css/style.css
@@ -251,9 +251,6 @@ html.scroll-enabled {
 
 
 
-
-
-
 .profile-pic-wrapper {
     position: absolute;
     display: flex;
@@ -289,4 +286,48 @@ html.scroll-enabled {
 /* Remove leftover pseudo‐glow */
 .profile-pic-wrapper::before {
     content: none;
+}
+
+
+
+
+
+
+
+/* contact me page */
+.contactme-lbl {
+    color: #fdf9ed;
+    font-size: 4.5rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    outline: 2px solid salmon 0;
+
+    margin-top: 7rem;
+    margin-left: 5rem;
+    margin-bottom: -1.5rem;
+}
+
+.socials-lbl {
+    color: #fdf9ed;
+    font-size: 2rem;
+    font-weight: 300;
+    outline: 2px solid salmon 0;
+    margin-left: 5rem;
+    white-space: pre-wrap;
+}
+
+
+.cntct-icon-btns {
+    margin-left: 5rem;
+}
+.cntct-lbls {
+    color: #fdf9ed;
+    font-size: 1.5rem;
+}
+.cntct-icon-btns .icon-btn {
+    color: rgb(207, 241, 241);
+    margin-right:1rem;
+    
+
+
 }
