--- a/css/style.css
+++ b/css/style.css
@@ -293,16 +293,13 @@ html.scroll-enabled {
 
 
 
-
-
-/* contact me page */
+/* CONTACT ME PAGE */
 .cntct-main {
-    margin: 15rem auto 0;
+
+    margin: 8rem auto 0;
     border-radius: 8px;
     padding: 0 1rem 1rem;
-    outline: 1px solid salmon 0; /* 0 sets opacity to 0 */
-    text-align: center;
-
+    margin-left: 30.7rem;
 }
 
 .contactme-lbl {
@@ -313,10 +310,62 @@ html.scroll-enabled {
     color:#fdf9ed;
 }
 
+.cntct-form form{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    margin: 2rem 0;
+    width: 100%;
+    max-width: 400px;
+    padding: -1rem;
+}
+
+.cntct-form input {
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter:brightness(4);
+    -webkit-backdrop-filter: brightness(4); /* safari support */
+    width: 100;
+    border-radius: 5px 5px 5px 5px ;
+    resize: none;
+    overflow-y: auto;  
+    font-family: Poppins, sans-serif;
+    font-size: large;
+}
+
+.cntct-form textarea {
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter:brightness(4);
+    -webkit-backdrop-filter: brightness(4); /* safari support */
+    border-radius: 5px 5px 5px 5px;
+    resize: none;
+    overflow-y: auto;  
+
+    width: 125%;
+    font-family: Poppins, sans-serif;
+    font-size: large;
+}
+
+
 .cntct-lbls {
     color: #fdf9ed;
     font-size: 1.5rem;
-    width: auto;
+    
+}
+
+.cntct-icon-btns { 
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    outline: 2px solid salmon 0;
+
+    background-color: #333331;
+    border-radius:0 ;
+}
+
+.cntct-row { 
+    display: flex;
+    justify-content: start;
+    gap: 2rem;
 }
 .cntct-icon-btns .icon-btn {
     color: rgb(207, 241, 241);
