--- a/css/style.css
+++ b/css/style.css
@@ -322,24 +322,25 @@ html.scroll-enabled {
 
 .cntct-form input {
     background-color: rgba(255, 255, 255, 0.25);
-    backdrop-filter:brightness(4);
-    -webkit-backdrop-filter: brightness(4); /* safari support */
+    /* backdrop-filter:brightness(1);
+    -webkit-backdrop-filter: brightness(1); /* safari support */
     width: 100;
     border-radius: 5px 5px 5px 5px ;
     resize: none;
     overflow-y: auto;  
     font-family: Poppins, sans-serif;
+    color: #fdf9ed;
     font-size: large;
 }
 
 .cntct-form textarea {
     background-color: rgba(255, 255, 255, 0.25);
-    backdrop-filter:brightness(4);
-    -webkit-backdrop-filter: brightness(4); /* safari support */
+    /* backdrop-filter:brightness(1);
+    -webkit-backdrop-filter: brightness(1); /* safari support */
     border-radius: 5px 5px 5px 5px;
     resize: none;
     overflow-y: auto;  
-
+    color: #fdf9ed;
     width: 125%;
     font-family: Poppins, sans-serif;
     font-size: large;
